--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -101,6 +101,31 @@ article img {
   margin: 80px auto;
 }
 
+@media all and (max-width: 1020px) {
+  article img {
+    width: 100%;
+    margin: 80px 0;
+  }
+}
+
+@media all and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  article > * {
+    width: calc(100% - 40px);
+  }
+}
+
+@media all and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait) {
+  body {
+    min-width: 320px;
+  }
+
+  article > * {
+    width: calc(100% - 40px);
+  }
+}
+
+
+
 article img + h2 {
   margin-top: -1px;
 }
