--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -38,3 +38,9 @@
     display: none;
   }
 }
+
+@media all and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  .sidebar {
+    display: none;
+  }
+}
