--- a/stylesheets/feed.css
+++ b/stylesheets/feed.css
@@ -7,9 +7,8 @@
    background-position: center -10px;
    background-repeat: no-repeat; */
 
-}
-
 .postsFeed {
+  -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 .postsFeed {
@@ -69,4 +68,13 @@
     height: 234px;
     background-size: cover;
     background-position: center;
+}
+
+.postFeed .postCard {
+  display: block;
+
+  border: 1px solid rgba(0,0,0,.1);
+  -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,.05);
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,.05);
+  background-color: #ffffff;
 }
