--- a/stylesheets/menubar.css
+++ b/stylesheets/menubar.css
@@ -3,10 +3,16 @@
   top: 0px;
   width: 100%;
   left: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 50px;
   padding: 0 20px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   z-index: 1;
 
@@ -22,5 +28,6 @@
 
 .feed .menubar, .landing .menubar {
   border-bottom: 1px solid rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.05);
   box-shadow: 0 1px 4px 0 rgba(0,0,0,0.05);
 }
