--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -1,21 +1,14 @@
 .landing.bg {
-   background-image: url(../images/index_mockup.png);
-   background-size: 1440px 3200px;
-   background-position: center -10px;
-   background-repeat: no-repeat;
+  background-image: url(../images/index_mockup.png);
+  background-size: 1440px 3200px;
+  background-position: center -10px;
+  background-repeat: no-repeat;
 }
 
 .landingWrapper {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   width: 1440px;
   max-width: 1440px;
@@ -23,7 +16,6 @@
   padding-top: 50px;
   overflow: hidden;
   border: 1px solid rgba(0,0,0,.1);
-  -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,.05);
   box-shadow: 0 1px 4px 0 rgba(0,0,0,.05);
 }
 
@@ -141,7 +133,7 @@
   top: 57px;
   width: 732px;
   height: 660px;
-  background-image: url(../images/landing/landing-mockup-1.jpg);
+  /* background-image: url(../images/landing/landing-mockup-1.jpg); */
 }
 
 #mockup2 {
@@ -149,7 +141,7 @@
   top: 57px;
   width: 532px;
   height: 670px;
-  background-image: url(../images/landing/landing-mockup-2.jpg);
+  /* background-image: url(../images/landing/landing-mockup-2.jpg); */
 }
 
 #mockup3 {
@@ -157,9 +149,8 @@
   top: 77px;
   width: 1348px;
   height: 779px;
-  background-image: url(../images/landing/landing-mockup-3.jpg);
+  /* background-image: url(../images/landing/landing-mockup-3.jpg); */
   border-radius: 5px 0 0 0;
-  -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,.1);
   box-shadow: 0 2px 10px 0 rgba(0,0,0,.1);
 }
 
@@ -171,7 +162,7 @@
 
 @media all and (max-width: 1180px) {
   .landing.bg {
-    background-image: url(../images/index_mockup_ipad.png);
+    /* background-image: url(../images/index_mockup_ipad.png); */
     background-size: 1024px 2275px;
   }
 
